added static based image layer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en"  ng-app="directivesModule">
 <head>
     <meta charset="UTF-8">
-    <title>ZD Maps</title>
+    <title>Leaflet angular Maps</title>
 </head>
 
 <body>
 
-<h3>zendynamix Map Directive</h3>
+<h3>Leaflet angular Map Directive</h3>
 
 <div id="wrapper" ng-controller="mapController">
 
@@ -16,23 +16,23 @@
         <!--tile-layer="bing"-->
         <div><h5> map with custom marker</h5></div>
 
-        <zd-map map-id="indexmap"  latitude=51.505 longitude=-0.09 zoom=6 markers=markerArray polyline=polylineArray   marker-configuration=markerConfiguration
-               polyline-configuration=polylineConfiguration map-height="500" map-width="500" tile-layer="osm"></zd-map>
+        <angular-map map-id="indexmap"  latitude=51.505 longitude=-0.09 zoom=6 markers=markerArray polyline=polylineArray   marker-configuration=markerConfiguration
+               polyline-configuration=polylineConfiguration map-height="500" map-width="603" tile-layer="osm"></angular-map>
 
     </span>
     <span id="map2">
       <!--  markers=bangaloreMarkerArray-->
          <div><h5> map with polygon</h5></div>
-        <zd-map map-id="secondmap"  latitude=12.9542944 longitude=77.4905117 zoom=12
+        <angular-map map-id="secondmap"  latitude=12.9542944 longitude=77.4905117 zoom=12
 
-                map-height="500" map-width="500"   polygon=polygon tile-layer="osm" polygon-configuration=polygonConfiguration></zd-map>
+                map-height="500" map-width="603"   polygon=polygon tile-layer="osm" polygon-configuration=polygonConfiguration></angular-map>
     </span>
 
 
     <!--map cluster   tile-layer="osm" -->
     <span id="map3">
         <div><h5> map with marker cluster</h5></div>
-        <zd-map map-id="clustermap"  latitude=-6.081689 longitude=145.391881 zoom=4  marker-cluster=markerCluster map-height="500" map-width="500" tile-layer="osm"></zd-map>
+        <angular-map map-id="clustermap"  latitude=-6.081689 longitude=145.391881 zoom=4  marker-cluster=markerCluster map-height="500" map-width="603" tile-layer="osm"></angular-map>
     </span>
 
 
@@ -40,23 +40,37 @@
 
     <span id="map4">
         <div><h5> map with marker cluster</h5></div>
-        <zd-map map-id="map4"  latitude=-6.081689 longitude=145.391881 zoom=4   map-height="500" map-width="500" tile-layer="bingAerial"></zd-map>
+        <br>
+        <angular-map map-id="map4"  latitude=-6.081689 longitude=145.391881 zoom=4   map-height="480" map-width="603" tile-layer="bingAerial"></angular-map>
     </span>
     <span id="map5">
 
         <div><h5> map with marker cluster</h5></div>
-        <zd-map map-id="map5"  latitude=-6.081689 longitude=145.391881 zoom=4  map-height="500" map-width="500" tile-layer="bingRoad"></zd-map>
+        <angular-map map-id="map5"  latitude=-6.081689 longitude=145.391881 zoom=4  map-height="500" map-width="603" tile-layer="bingRoad" polygon=rectangle></angular-map>
     </span>
 
     <span id="map6">
         <div><h5> map with marker cluster</h5></div>
-        <zd-map map-id="map6"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="500" tile-layer="bingAerialWithLabels"></zd-map>
+        <angular-map map-id="map6"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="603" tile-layer="bingAerialWithLabels"></angular-map>
     </span>
 
     <span id="map7">
         <div><h5> map with marker cluster</h5></div>
-        <zd-map map-id="map7"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="500" tile-layer="googleMaps"></zd-map>
+
+        <angular-map map-id="map7"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="603" tile-layer="googleMaps"></angular-map>
     </span>
+
+    <span id="map8">
+        <div><h5> map with marker cluster</h5></div><!--circle-lat-lng=circleLatLng-->
+        <angular-map map-id="map8"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="600" tile-layer="stamenBackWhite" ></angular-map>
+    </span>
+
+    <span id="map9">
+        <div><h5> map with static image</h5></div>
+
+        <angular-map map-id="map9"  image-tile=staticImageTitle  map-height="500" map-width="603" ></angular-map>
+    </span>
+
 
 </div>
 
@@ -84,5 +98,8 @@
 <script src="malibs/bingLayer.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbUGvpUJn8JdZFlrXn2krev5dWYhRSZV8"></script>
 <script src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
+<!--full screen map-->
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
 </body>
 </html>
