changed the folder structure

--- a/index.html
+++ b/index.html
@@ -2,84 +2,81 @@
 <html lang="en"  ng-app="directivesModule">
 <head>
     <meta charset="UTF-8">
-    <title>Leaflet angular Maps</title>
+    <title>Leaflet Angular Maps</title>
 </head>
 
 <body>
 
-<h3>Leaflet angular Map Directive</h3>
+<h3>Leaflet Angular Map Directive</h3>
 
 <div id="wrapper" ng-controller="mapController">
 
-    <span id="map1">
+    <div >
 
-        <!--tile-layer="bing"-->
-        <div><h5> map with custom marker</h5></div>
-
+        <span id="map1">
+            <div><h5> map with custom marker</h5></div>
         <angular-map map-id="indexmap"  latitude=51.505 longitude=-0.09 zoom=6 markers=markerArray polyline=polylineArray   marker-configuration=markerConfiguration
-               polyline-configuration=polylineConfiguration map-height="500" map-width="603" tile-layer="osm"></angular-map>
-
-    </span>
-    <span id="map2">
-      <!--  markers=bangaloreMarkerArray-->
-         <div><h5> map with polygon</h5></div>
+                     polyline-configuration=polylineConfiguration map-height="500" map-width="603" tile-layer="osm"></angular-map>
+        </span>
+        <span id="map2">
+        <div><h5> map with polygon</h5></div>
         <angular-map map-id="secondmap"  latitude=12.9542944 longitude=77.4905117 zoom=12
-
-                map-height="500" map-width="603"   polygon=polygon tile-layer="osm" polygon-configuration=polygonConfiguration></angular-map>
-    </span>
-
-
-    <!--map cluster   tile-layer="osm" -->
-    <span id="map3">
-        <div><h5> map with marker cluster</h5></div>
+                     map-height="500" map-width="603"   polygon=polygon tile-layer="osm" polygon-configuration=polygonConfiguration></angular-map>
+        </span>
+        <span id="map3">
+     <div><h5> map with marker cluster</h5></div>
         <angular-map map-id="clustermap"  latitude=-6.081689 longitude=145.391881 zoom=4  marker-cluster=markerCluster map-height="500" map-width="603" tile-layer="osm"></angular-map>
-    </span>
+        </span>
 
+    </div>
 
-
-
-    <span id="map4">
+    <div>
+          <span id="map4">
         <div><h5> map with marker cluster</h5></div>
         <br>
         <angular-map map-id="map4"  latitude=-6.081689 longitude=145.391881 zoom=4   map-height="480" map-width="603" tile-layer="bingAerial"></angular-map>
     </span>
-    <span id="map5">
-
+        <span id="map5">
         <div><h5> map with marker cluster</h5></div>
         <angular-map map-id="map5"  latitude=-6.081689 longitude=145.391881 zoom=4  map-height="500" map-width="603" tile-layer="bingRoad" polygon=rectangle></angular-map>
     </span>
-
-    <span id="map6">
+        <span id="map6">
         <div><h5> map with marker cluster</h5></div>
         <angular-map map-id="map6"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="603" tile-layer="bingAerialWithLabels"></angular-map>
     </span>
+    </div>
 
-    <span id="map7">
+    <div>
+         <span id="map7">
         <div><h5> map with marker cluster</h5></div>
-
         <angular-map map-id="map7"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="603" tile-layer="googleMaps"></angular-map>
     </span>
-
-    <span id="map8">
+        <span id="map8">
         <div><h5> map with marker cluster</h5></div><!--circle-lat-lng=circleLatLng-->
         <angular-map map-id="map8"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="600" tile-layer="stamenBackWhite" ></angular-map>
     </span>
-
-    <span id="map9">
+        <span id="map9">
         <div><h5> map with static image</h5></div>
-
         <angular-map map-id="map9"  image-tile=staticImageTitle  map-height="500" map-width="603" ></angular-map>
     </span>
+    </div>
+    </div>
 
+
+
+
+<div>
+
+</div>
 
 </div>
 
 
 <script src="js/angular.js"></script>
-<script src="js/mapController.js"></script>
-<script src="js/map.js"></script>
+<script src="js/controller/mapController.js"></script>
+<script src="js/directive/map.js"></script>
 <script src="js/service/markerSettingsService.js"></script>
-<script src="js/helperService.js"></script>
+<script src="js/service/helperService.js"></script>
 <script src="js/service/mapSettingsService.js"></script>
 <script src="js/service/polylineSettingService.js"></script>
 <script src="js/service/polygonSettingService.js"></script>
@@ -88,14 +85,14 @@
 
 <!--map clustering-->
 
-<link rel="stylesheet" type="text/css" href="malibs/css/leafletv0.7.7.css" />
-<link rel="stylesheet" type="text/css" href="malibs/css/MarkerCluster.Default0.4.0.css" />
-<link rel="stylesheet" type="text/css" href="malibs/css/MarkerClusters0.4.0.css" />
+<link rel="stylesheet" type="text/css" href="maplibs/css/leafletv0.7.7.css" />
+<link rel="stylesheet" type="text/css" href="maplibs/css/MarkerCluster.Default0.4.0.css" />
+<link rel="stylesheet" type="text/css" href="maplibs/css/MarkerClusters0.4.0.css" />
 
-<script type='text/javascript' src='malibs/jquerymin.js'></script>
-<script type='text/javascript' src='malibs/leaflet.js'></script>
-<script type='text/javascript' src='malibs/leaflet.markercluster.js'></script>
-<script src="malibs/bingLayer.js"></script>
+<script type='text/javascript' src='maplibs/jquerymin.js'></script>
+<script type='text/javascript' src='maplibs/leaflet.js'></script>
+<script type='text/javascript' src='maplibs/leaflet.markercluster.js'></script>
+<script src="maplibs/bingLayer.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbUGvpUJn8JdZFlrXn2krev5dWYhRSZV8"></script>
 <script src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
 <!--full screen map-->
