--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 </div>
 
 
-<script src="js/angular.js"></script>
-<script src="js/controller/mapController.js"></script>
-<script src="js/directive/map.js"></script>
-<script src="js/service/markerSettingsService.js"></script>
-<script src="js/service/helperService.js"></script>
-<script src="js/service/mapSettingsService.js"></script>
-<script src="js/service/polylineSettingService.js"></script>
-<script src="js/service/polygonSettingService.js"></script>
+<script src="src/angular.js"></script>
+<script src="src/controller/mapController.js"></script>
+<script src="src/directive/map.js"></script>
+<script src="src/service/markerSettingsService.js"></script>
+<script src="src/service/helperService.js"></script>
+<script src="src/service/mapSettingsService.js"></script>
+<script src="src/service/polylineSettingService.js"></script>
+<script src="src/service/polygonSettingService.js"></script>
 <link rel="stylesheet" href="css/style.css" />
 
 
@@ -95,8 +95,6 @@
 <script src="maplibs/bingLayer.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbUGvpUJn8JdZFlrXn2krev5dWYhRSZV8"></script>
 <script src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
-<!--full screen map-->
-<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
-<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
+
 </body>
 </html>
