changed ng app name

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  ng-app="directivesModule">
+<html lang="en"  ng-app="angular-leaflet-map">
 <head>
     <meta charset="UTF-8">
     <title>Leaflet Angular Maps</title>
