--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
                      map-height="500" map-width="603"   polygon=polygon tile-layer="osm" polygon-configuration=polygonConfiguration></angular-map>
         </span>
         <span id="map3">
-     <div><h5> map with marker cluster</h5></div>
+         <div><h5> map with marker cluster</h5></div>
         <angular-map map-id="clustermap"  latitude=-6.081689 longitude=145.391881 zoom=4  marker-cluster=markerCluster map-height="500" map-width="603" tile-layer="osm"></angular-map>
         </span>
+        <div class="clear"></div>
 
     </div>
 
+
+
+
     <div>
-          <span id="map4">
+        <span id="map4">
         <div><h5> map with marker cluster</h5></div>
-        <br>
+
         <angular-map map-id="map4"  latitude=-6.081689 longitude=145.391881 zoom=4   map-height="480" map-width="603" tile-layer="bingAerial"></angular-map>
-    </span>
+          </span>
         <span id="map5">
         <div><h5> map with marker cluster</h5></div>
         <angular-map map-id="map5"  latitude=-6.081689 longitude=145.391881 zoom=4  map-height="500" map-width="603" tile-layer="bingRoad" polygon=rectangle></angular-map>
@@ -44,6 +48,7 @@
         <div><h5> map with marker cluster</h5></div>
         <angular-map map-id="map6"  latitude=-6.081689 longitude=145.391881 zoom=4 map-height="500" map-width="603" tile-layer="bingAerialWithLabels"></angular-map>
     </span>
+        <div class="clear"></div>
     </div>
 
     <div>
@@ -59,6 +64,7 @@
         <div><h5> map with static image</h5></div>
         <angular-map map-id="map9"  image-tile=staticImageTitle  map-height="500" map-width="603" ></angular-map>
     </span>
+        <div class="clear"></div>
     </div>
     </div>
 
