added map clustering dependency to bower

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 <!--<script src="src/angular.js"></script>-->
-<script src="../bower_components/angular/angular.min.js"></script>
+<script src="../../bower_components/angular/angular.min.js"></script>
 <script src="src/controller/mapController.js"></script>
 <script src="src/directive/map.js"></script>
 <script src="src/service/markerSettingsService.js"></script>
