added bower dependencies

--- a/index.html
+++ b/index.html
@@ -92,12 +92,15 @@
 
 <!--map clustering-->
 
-<link rel="stylesheet" type="text/css" href="maplibs/css/leafletv0.7.7.css" />
+<!--<link rel="stylesheet" type="text/css" href="maplibs/css/leafletv0.7.7.css" />-->
+
+<link rel="stylesheet" type="text/css" href="../../bower_components/leaflet/dist/leaflet.css" />
 <link rel="stylesheet" type="text/css" href="maplibs/css/MarkerCluster.Default0.4.0.css" />
 <link rel="stylesheet" type="text/css" href="maplibs/css/MarkerClusters0.4.0.css" />
 
 <script type='text/javascript' src='maplibs/jquerymin.js'></script>
-<script type='text/javascript' src='maplibs/leaflet.js'></script>
+<!--<script type='text/javascript' src='maplibs/leaflet.js'></script>-->
+<script type='text/javascript' src='../../bower_components/leaflet/dist/leaflet.js'></script>
 <script type='text/javascript' src='maplibs/leaflet.markercluster.js'></script>
 <script src="maplibs/bingLayer.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbUGvpUJn8JdZFlrXn2krev5dWYhRSZV8"></script>
